# rsky

./: .gitignore  CMakeLists.txt  FireMission  README.md  README.txt  log.m  optitrack_bounds.txt  throttle_pass.cpp  udp_receiver.m
executables/: Camera_test.cpp  SimMain.cpp  fts_test.cpp  gain_testing.cpp  main.cpp  main_no_timekeeper.cpp  pathing_simulation.cpp  rt_simulation.cpp  sim_main.cpp  simulation.cpp  throttle_pass.cpp
include/common/: LowPass.h  MathUtils.h  TimeKeeper.h  math_util.h  types.h
include/control/: InnerLoop.h  OuterLoop.h  QuadMixer.h  attitude_pd_params.h  coverage_vector_field.h  inner_loop_attitude_pd.h  mixer_params.h  outer_loop_coverage.h  outer_loop_position_pd.h  position_pd_params.h  posotion_pd_params.h  quad_mixer_x.h  sweep_types.h
include/drivers/: IMUHandler.h  MotorDriver.h  MotorTask.h  RCIn.h
include/estimation/: AHRS.h  EKF.h  ekf15_full.h
include/guidance/: ModeManager.h  mode_manager.h
include/mocap/: mocapHandler.h  network.h
include/plant/: motor_model_first_order.h  plant_types.h  quad_dynamics_euler.h  quad_params.h  quad_state.h
include/sensors/: BatteryHandler.h  IMUHandler.h  ImuSim.h  OptiSim.h  ThermalCamera.h  imu_sim.h  noise_gaussian.h  optitrack_sim.h  sensor_types.h
include/sim/: logger.h
include/simulator/: Dynamics.h  MotorModel.h
include/telemetry/: TelemetryTask.h  udp_sender.h
include/vision/: SearchGrid.h  WildfireDetection.h
libs/Navio2/: CMakeLists.txt
libs/Navio2/Common/: CMakeLists.txt
libs/Navio2/Navio2/: CMakeLists.txt
postprocessing/: sim_visualizer.m
src/: BatteryHandler.cpp  BatteryHandler.h  CMakeLists.txt  IMUHandler.cpp  IMUHandler.h  MotorDriver.cpp  MotorDriver.h  RCInput.cpp  RCInput.h  UDPSender.cpp  UDPSender.h  controller.cpp  controller.h  ekf.cpp  ekf.h  guidance.cpp  guidance.h  math_utils.cpp  math_utils.h  network.cpp  network.h  telemetrypacket.h  throttle_pass.cpp
src/common/: LowPass.cpp  MathUtils.cpp  TimeKeeper.cpp  math_util.cpp
src/control/: InnerLoop.cpp  OuterLoop.cpp  QuadMixer.cpp  coverage_vector_field.cpp  inner_loop_attitude_pd.cpp  outer_loop_coverage.cpp  outer_loop_position_pd.cpp  quad_mixer_x.cpp
src/drivers/: MotorDriver.cpp  MotorTask.cpp  RCIn.cpp
src/estimation/: .EKF.cpp.swp  AHRS.cpp  EKF.cpp  ekf15_full.cpp
src/guidance/: ModeManager.cpp  mode_manager.cpp
src/mocap/: mocapHandler.cpp  network.cpp
src/plant/: motor_model_first_order.cpp  quad_dynamics_euler.cpp
src/sensors/: BatteryHandler.cpp  IMUHandler.cpp  ImuSim.cpp  OptiSim.cpp  ThermalCamera.cpp  imu_sim.cpp  optitrack_sim.cpp
src/sim/: logger.cpp
src/simulator/: Dynamics.cpp  MotorModel.cpp
src/telemetry/: TelemetryTask.cpp  udp_sender.cpp
src/vision/: SearchGrid.cpp  WildfireDetection.cpp
thermal-camera/: CMakeLists.txt  MLX90640_API.h  main.cpp
